# python_web_HW_4

./: README.md  main.py  pyproject.toml
front-init/: app.py  main.py
front-init/storage/: data.json
storage/: data.json
